Icon Fix on mobile version

--- a/css/style.css
+++ b/css/style.css
@@ -541,21 +541,7 @@
 					font-size: 1.5em;
 				}
 
-		ul.headericons {
-			cursor: default;
-			list-style: none;
-			padding-left: 0;
-		}
-
-			ul.headericons li {
-				display: inline-block;
-				padding: 0 0.05em 0 0;
-			}
-
-				ul.headericons li:last-child {
-					padding-right: 0;
-				}
-
+		
 				ul.headericons li .icon:before {
 					font-size: 1.5em;
 				}
